@@ -95,6 +95,7 @@ Supported Presently
 
 Changelog for 1.3.36
 * Set default date for AP invoice creation to current date (Chris T)
+* Removed "apply discount" from use overpayment screen (Chris T)
 
 Changelog for 1.3.35
 * Fixed uninitialized value warnings when cached template enabled (Chris T)
